# barhunters

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: main_tech0-gen-11-step3-2-node-66.yml  main_tech0-gen-11-step3-2-py-66.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  figmaMake_dummy_data.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1f8d3c92b4e_add_one_on_ones_table.py  b72a9c104d61_rename_dashboard_user_roles.py  bbef3e2293c9_initial_schema.py  c83e1f4a2d09_v7_two_value_points_and_role_multiplier.py  d4e8f0a2b6c1_add_notifications_table.py  dd855ad482be_add_indicator_calc_fields.py  e7f2c1a93b08_align_with_spec_v0_8.py
backend/app/: __init__.py  auth.py  db.py  main.py  query_order.py  settings.py
backend/app/models/: __init__.py  activity_genre.py  application_number_counter.py  base.py  department_category_points.py  indicator.py  notification.py  one_on_one.py  organization.py  point_application.py  user.py
backend/app/routers/: __init__.py  approvals.py  auth.py  cascade.py  dashboard.py  masters.py  notifications.py  one_on_ones.py  point_applications.py  roadmap.py  users.py
backend/app/schemas/: __init__.py  auth.py  cascade.py  master.py  notification.py  point_application.py  points_breakdown.py  roadmap.py
backend/app/services/: __init__.py  applications.py  calculator.py  dashboard_service.py  indicator_meta_service.py  notifications.py  phase_roadmap.py  point_calc.py  points_service.py  session_tokens.py
backend/data/: indicator_meta.json
backend/docs/: schema_notes.md
backend/scripts/: batch_aggregate_points.py  seed_activity_genres.py  seed_azure_demo_data.py  seed_minimal.py  seed_one_on_ones.py  seed_sample_application.py  seed_sample_notifications.py  seed_unread_notifications.py  sync_indicator_meta_json.py
dashboard/: data.js  index.html  panels.jsx  remixed-9d8265c3.html  screen1.jsx  screen2.jsx  screen3.jsx  style.css  ui.jsx
docs/: calculation_logic.md
docs/data/: README.md  _generate_causal_chain_v9_2.py  causal_chain_v9_2.json
docs/design/: 260329_仮説ワーク_顧客行動指標_テンプレート.md  Figma_Make用プロンプト_部門長MVP.md  UIデザイン宿題.pptx  サービス企画資料_整理版.md  ダッシュボード設計ドキュメントv0.1.docx  人的資本ポイント_MVP_部門長アプリ_コンセプト.md  提案資料叩き台_顧客起点と部門長ダッシュボード.md
docs/planning/: 260411_下条案_やること効果指標.md  homework_backlog.md  schedule_overview.md  sprint_alignment.md  全体スケジュールのFigJamへの落とし方.md  (+2 more)
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
spec/: spec.md
(+90 files in other folders)
