[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "barhunters-backend"
version = "0.1.0"
description = "barhunters API (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "alembic>=1.14"]
# 本番 DB が MySQL（Azure Database for MySQL 等）のとき: pip install -e ".[mysql]"
mysql = ["pymysql>=1.1"]
# 本番 DB が PostgreSQL のとき: pip install -e ".[postgres]"
postgres = ["psycopg[binary]>=3.1"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["I001"]
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]
"scripts/*.py" = ["E402", "E501"]
# 係数行列・メタの Wide リテラルが多く、100 桁での折り返しが可読性を損なう
"app/services/calculator.py" = ["E501"]
"app/services/points_service.py" = ["E501"]
"app/schemas/cascade.py" = ["E501"]
